Install spatialite to remove warning

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "directus": "^10.2.1",
     "directus-extension-wpslug-interface": "^1.1.0",
+    "spatialite": "^0.1.0",
     "sqlite3": "^5.1.6",
     "tedious": "^16.1.0"
   }
